--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
-    "vue": "^3.0.0",
-    "vue-router": "^4.0.0-0",
-    "vuex": "^4.0.0-0"
+    "core-js": "~3.7.0",
+    "vue": "~3.0.0",
+    "vue-router": "~4.0.0-0",
+    "vuex": "~4.0.0-0"
   },
   "devDependencies": {
-    "@types/jest": "^24.0.19",
-    "@typescript-eslint/eslint-plugin": "^2.33.0",
-    "@typescript-eslint/parser": "^2.33.0",
+    "@types/jest": "~26.0.0",
+    "@typescript-eslint/eslint-plugin": "~4.7.0",
+    "@typescript-eslint/parser": "~4.7.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-e2e-cypress": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
@@ -27,19 +27,19 @@
     "@vue/cli-plugin-unit-jest": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0",
-    "@vue/eslint-config-prettier": "^6.0.0",
-    "@vue/eslint-config-typescript": "^5.0.2",
-    "@vue/test-utils": "^2.0.0-0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-vue": "^7.0.0-0",
-    "lint-staged": "^9.5.0",
-    "prettier": "^1.19.1",
-    "sass": "^1.26.5",
-    "sass-loader": "^8.0.2",
-    "typescript": "~3.9.3",
-    "vue-jest": "^5.0.0-0"
+    "@vue/compiler-sfc": "~3.0.0",
+    "@vue/eslint-config-prettier": "~6.0.0",
+    "@vue/eslint-config-typescript": "~7.0.0",
+    "@vue/test-utils": "~2.0.0-0",
+    "eslint": "~7.13.0",
+    "eslint-plugin-prettier": "~3.1.0",
+    "eslint-plugin-vue": "~7.1.0",
+    "lint-staged": "~10.5.0",
+    "prettier": "~1.19.0",
+    "sass": "~1.29.0",
+    "sass-loader": "~10.0.0",
+    "typescript": "~3.9.0",
+    "vue-jest": "~5.0.0-0"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
