--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "~3.7.0",
+    "core-js": "~3.8.0",
     "vue": "~3.0.0",
-    "vue-router": "~4.0.0-0",
+    "vue-router": "~4.0.0",
     "vuex": "~4.0.0-0"
   },
   "devDependencies": {
     "@types/jest": "~26.0.0",
-    "@typescript-eslint/eslint-plugin": "~4.7.0",
-    "@typescript-eslint/parser": "~4.7.0",
+    "@typescript-eslint/eslint-plugin": "~4.9.0",
+    "@typescript-eslint/parser": "~4.9.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-e2e-cypress": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
@@ -31,14 +31,14 @@
     "@vue/eslint-config-prettier": "~6.0.0",
     "@vue/eslint-config-typescript": "~7.0.0",
     "@vue/test-utils": "~2.0.0-0",
-    "eslint": "~7.13.0",
+    "eslint": "~7.15.0",
     "eslint-plugin-prettier": "~3.1.0",
-    "eslint-plugin-vue": "~7.1.0",
+    "eslint-plugin-vue": "~7.2.0",
     "lint-staged": "~10.5.0",
     "prettier": "~1.19.0",
-    "sass": "~1.29.0",
-    "sass-loader": "~10.0.0",
-    "typescript": "~3.9.0",
+    "sass": "~1.30.0",
+    "sass-loader": "~10.1.0",
+    "typescript": "~4.1.0",
     "vue-jest": "~5.0.0-0"
   },
   "gitHooks": {
