--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "core-js": "~3.8.0",
     "vue": "~3.0.0",
     "vue-router": "~4.0.0",
-    "vuex": "~4.0.0-0"
+    "vuex": "~4.0.0"
   },
   "devDependencies": {
     "@types/jest": "~26.0.0",
